--- a/src/index.css
+++ b/src/index.css
@@ -103,3 +103,37 @@
     font-family: var(--font-heading);
   }
 }
+
+
+.side-ad {
+  position: fixed;
+  top: 100px;
+  width: 160px;
+  height: 600px;
+  z-index: 9999;
+  background: #fff;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.ad-left {
+  left: 10px;
+}
+
+.ad-right {
+  right: 10px;
+}
+
+#root{
+  max-width: 1100px;
+  margin: 0 auto;
+  position: relative;
+  /* z-index: 1; */
+  /* text-align: center; */
+}
+
+@media (max-width: 1450px) {
+  .side-ad{
+    display: none !important;
+  }
+}
